Updated to the most recent version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@324586 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/wrappers/php.xml
+++ b/language/wrappers/php.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: b4210fc43895e667ffd62eef7b8fdc5c3d70413b Maintainer: seros Status: ready -->
+<!-- EN-Revision: a9b26c34e481fa948bcc7d75b73b441605142dd7 Maintainer: seros Status: ready -->
 <!-- Reviewed: no -->
 
 <refentry xml:id="wrappers.php" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
@@ -69,9 +69,9 @@
   <refsect2>
    <title>php://output</title>
    <para>
-    <filename>php://output</filename> es un flujo de sólo salida que permite
+    <filename>php://output</filename> es un flujo de sólo lectura que permite
     escribir en el buffer de salida tal como lo hacen
-    <function>print</function> o <function>echo</function>.
+    <link linkend="function.print"><literal>print</literal></link> y <link linkend="function.echo"><literal>echo</literal></link>.
    </para>
   </refsect2>
   
