English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@324731 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/require.xml
+++ b/language/control-structures/require.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: a9b26c34e481fa948bcc7d75b73b441605142dd7 Maintainer: jpberdejo Status: ready -->
 <!-- Reviewed: yes -->
 
 <sect1 xml:id="function.require" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
- <title><function>require</function></title>
+ <title>require</title>
  <?phpdoc print-version-for="require"?>
  
  <para>
-  <function>require</function> es idéntico a <function>include</function>
+  <literal>require</literal> es idéntico a <link linkend="function.include"><literal>include</literal></link>
   excepto que en caso de fallo producirá un error fatal de nivel <constant>E_COMPILE_ERROR</constant>. 
   En otras palabras, éste detiene el script mientras que
-  <function>include</function> sólo emitirá una advertencia
+  <link linkend="function.include"><literal>include</literal></link> sólo emitirá una advertencia
   (<constant>E_WARNING</constant>) lo cual permite continuar el script.
  </para>
  <para>
-  Véase la documentación de <function>include</function> para más información.
+  Véase la documentación de <link linkend="function.include"><literal>include</literal></link> para más información.
  </para>
  
 </sect1>
