--- a/language/control-structures/require-once.xml
+++ b/language/control-structures/require-once.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: a9b26c34e481fa948bcc7d75b73b441605142dd7 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="function.require-once" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
- <title><function>require_once</function></title>
+ <title>require_once</title>
  <?phpdoc print-version-for="require_once"?>
  <para>
-  La sentencia <function>require_once</function> es idéntica a
-  <function>require</function> excepto que PHP verificará si el archivo ya ha
+  La sentencia <literal>require_once</literal> es idéntica a
+  <link linkend="function.require"><literal>require</literal></link> excepto que PHP verificará si el archivo ya ha
   sido incluido y si es así, no se incluye (require) de nuevo.
  </para>
  <para>
-  Ver la documentación de <function>include_once</function> para información
-  sobre el comportamiento de <literal>_once</literal>, y como difiere de sus hermanos no <literal>_once</literal>.
+  Ver la documentación de <link linkend="function.include-once"><literal>include_once</literal></link> para información
+  sobre el comportamiento de <literal>_once</literal>, y como difiere de 
+  sus hermanos no <literal>_once</literal>.
  </para>
 
 </sect1>
