Updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@324811 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/references.xml
+++ b/language/references.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: d7470c8afcc082dbd2e195ad54d5f9413fa0df20 Maintainer: yago Status: ready -->
-<!-- Reviewed: no -->
+<!-- EN-Revision: addba5dcce72f6c9e66751d0d12fa830bdef4707 Maintainer: yago Status: ready -->
+<!-- Reviewed: no Maintainer: yago -->
 
 <chapter xml:id="language.references" xmlns="http://docbook.org/ns/docbook">
  <title>Referencias Explicadas</title>
@@ -24,7 +24,7 @@
  </sect1>
  
  <sect1 xml:id="language.references.whatdo">
-  <title>¿Qué hacen las Referencias?</title>
+  <title>¿Qué hacen las referencias?</title>
   <para>
    Hay tres operaciones básicas que se realizan usando referencias:
    <link linkend="language.references.whatdo.assign">asignar por
