English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@324976 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/continue.xml
+++ b/language/control-structures/continue.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: d90c8c357f629f829a4efe7f4445384621827ba9 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: a9b26c34e481fa948bcc7d75b73b441605142dd7 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="control-structures.continue" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>continue</literal></title>
@@ -97,7 +97,7 @@ for ($i = 0; $i < 5; ++$i) {
    </screen>
    <para>
     debido a que el <literal>continue print "$i\n";</literal> se evalúa completo
-    como una sola expresión y así <function>print</function> se llama solamente
+    como una sola expresión y así <link linkend="function.print"><literal>print</literal></link> se llama solamente
     cuando <literal>$i == 2</literal> es verdadero. (El valor de retorno de
     <literal>print</literal> es pasado a <literal>continue</literal> como el
     argumento numérico.)
