--- a/language/control-structures/declare.xml
+++ b/language/control-structures/declare.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 3ac3e340846ebed0f806322504139b0116b96714 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="control-structures.declare" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>declare</literal></title>
@@ -183,6 +183,9 @@ declare(encoding='ISO-8859-1');
   <para>
    Tener en cuenta que PHP no expone si <literal>--enable-zend-multibyte</literal> fue
    utilizado para compilar PHP que no sea por <function>phpinfo</function>.
+  </para>
+  <para>
+   Ver también <link linkend="ini.zend.script-encoding">zend.script_encoding</link>.
   </para>
    <!-- FIXME PHP_6
    In PHP 6.0, the <literal>encoding</literal>
