English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@325194 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/include-once.xml
+++ b/language/control-structures/include-once.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: a9b26c34e481fa948bcc7d75b73b441605142dd7 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="function.include-once" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
- <title><function>include_once</function></title>
+ <title>include_once</title>
  <?phpdoc print-version-for="include_once"?>
  <para>
-  La sentencia <function>include_once</function> incluye y evalúa
+  La sentencia <literal>include_once</literal> incluye y evalúa
   el fichero especificado durante la ejecución del script.
-  Es un comportamiento similar al de la sentencia <function>include</function>,
+  Es un comportamiento similar al de la sentencia <link linkend="function.include"><literal>include</literal></link>,
   siendo la única diferencia que si el código del fichero ya ha 
   sido incluido, no se volverá a incluir. Como su nombre lo indica,
   será incluido sólo una vez.
  </para>
  <para>
-  <function>include_once</function> puede ser usado en casos donde
+  <literal>include_once</literal> puede ser usado en casos donde
   el mismo fichero podría ser incluido y evaluado más de una vez durante una
   ejecución particular de un script, así que en este caso, puede ayudar a evitar
   problemas como la redefinición de funciones, reasignación de valores de variables, etc.
  </para>
  <para>
-  Ver la documentación de <function>include</function> para información sobre
+  Ver la documentación de <link linkend="function.include"><literal>include</literal></link> para información sobre
   como trabaja esta función.
  </para>
  <para>
@@ -29,7 +29,7 @@
    Con PHP 4, la funcionalidad <literal>_once</literal> difiere entre sistemas operativos
    insensibles a mayúsculas y minúsculas (como Windows) así que por ejemplo:
    <example>
-    <title><function>include_once</function> con un SO insensible a mayúsculas y minúsculas en PHP 4</title>
+    <title><literal>include_once</literal> con un SO insensible a mayúsculas y minúsculas en PHP 4</title>
     <programlisting role="php">
 <![CDATA[
 <?php
