Updated to the most recent version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@325380 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/changelog.xml
+++ b/language/oop5/changelog.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: a9b26c34e481fa948bcc7d75b73b441605142dd7 Maintainer: andresdzphp Status: ready -->
-<!-- Reviewed: yes Maintainer: andresdzphp -->
+<!-- EN-Revision: 84b8fca68fc762fefe85acde180a38b2e77a28b9 Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: yes Maintainer: seros -->
 
 <sect1 xml:id="language.oop5.changelog" xmlns="http://docbook.org/ns/docbook">
  <title>Registro de cambios de POO</title>
  <para>
-  Aquí se registran los cambios del modelo de POO de PHP 5. 
-  Las descripciones, y otras notas,
-  de estas nuevas funcionalidades están documentadas dentro del apartado de POO.
+  Aquí se registran los cambios del modelo de POO de PHP 5. Las descripciones y otras notas respecto
+  a estas nuevas funcionalidades están documentadas dentro de la documentación de POO 5.
  </para>
  <para>
   <informaltable>
@@ -23,18 +22,18 @@
      <row>
       <entry>5.4.0</entry>
       <entry>
-       Cambiado: Si una clase <link linkend="language.oop5.abstract">abstract</link> 
+       Cambiado: Si una clase <link linkend="language.oop5.abstract">abstracta</link> 
        define una firma para el constructor ahora se hará cumplir.
       </entry>
      </row>
      <row>
       <entry>5.3.3</entry>
       <entry>
-       Cambiado: Ya no se trata a los métodos que tengan el mismo nombre que el
-       último elemento de una clase con 
-       <link linkend="language.namespaces">espacio de nombres</link> como a un 
-       <link linkend="language.oop5.decon">constructor</link>.
-       Este cambio no afecta a las clases que no pertenecen a un espacio de nombres.
+       Cambiado: Los métodos con el mismo nombre que el último elemento de un nombre
+       de clase perteneciente a un <link linkend="language.namespaces">espacio de nombres</link>
+       ya no serán tratado como un
+       <link linkend="language.oop5.decon">constructor</link>. Este cambio no
+       afecta a las clases que no pertenecen a un espacio de nombres.
       </entry>
      </row>
      <row>
@@ -49,7 +48,7 @@
       <entry>5.3.0</entry>
       <entry>
        Cambiado: Ahora es posible hacer referencia a la clase utilizando una variable
-       (p.ej., <literal>echo $classname::constant;</literal>).
+       (p.ej., <literal>echo $nombreclase::constante;</literal>).
        La variable no puede contener como valor una palabra clave (p.ej., <literal>self</literal>,
        <literal>parent</literal> o <literal>static</literal>).
       </entry>
@@ -59,7 +58,7 @@
       <entry>
        Cambiado: Se emite un error de nivel <constant>E_WARNING</constant> si
        al <link linkend="language.oop5.overloading">sobrecargar</link> un método
-       mágico, se le declara como <link linkend="language.oop5.static">estático</link>.
+       mágico se le declara como <link linkend="language.oop5.static">estático</link>.
        Además, hace necesario que tengan visibilidad pública.
       </entry>
      </row>
@@ -71,7 +70,7 @@
        en el bloque <link linkend="language.exceptions">catch</link>, y provocaban
        un error fatal. Ahora, las excepciones lanzadas dentro de la función __autoload
        pueden capturarse en el bloque <link linkend="language.exceptions">catch</link>, con
-       una única salvedad. Si se disparara una excepción definida por el usuario, entonces esta
+       una única salvedad. Si se lanza una excepción definida por el usuario, entonces esta
        excepción debería estar disponible. Se puede utilizar recursivamente la función
        __autoload para cargar automáticamente la clase de la excepción definida por el usuario.
       </entry>
@@ -95,8 +94,7 @@
      <row>
       <entry>5.3.0</entry>
       <entry>
-       Añadido: <link linkend="language.oop5.late-static-bindings">Enlaces estáticos
-       en tiempo de ejecución</link>.
+       Añadido: <link linkend="language.oop5.late-static-bindings">Enlaces estáticos en tiempo de ejecución</link>.
       </entry>
      </row>
      <row>
@@ -114,21 +112,21 @@
        (p.ej, en <function>printf</function> con el modificador <literal>%s</literal>) pero no
        en contextos de otro tipo (p.ej. con el modificador <literal>%d</literal>).
        Desde PHP 5.2.0, convertir objetos a string sin el método <literal>__toString</literal>
-       emitirá un <constant>E_RECOVERABLE_ERROR</constant>.
+       emitirá un error de nivel <constant>E_RECOVERABLE_ERROR</constant>.
       </entry>
      </row>
      <row>
       <entry>5.1.3</entry>
       <entry>
        Cambiado: En versiones anteriores de PHP 5, se consideraba obsoleto
-       el uso de <literal>var</literal> y emitiría un error de nivel
+       el uso de <literal>var</literal> y emitía un error de nivel
        <constant>E_STRICT</constant>. Ya no está obsoleto, y por tanto no emite el error.
       </entry>
      </row>
      <row>
       <entry>5.1.0</entry>
       <entry>
-       Cambiados: Ahora se invoca al método estático
+       Cambiado: Ahora se invoca al método estático
        <link linkend="object.set-state">__set_state()</link> en las clases
        exportadas por <function>var_export</function>.
       </entry>
@@ -136,7 +134,7 @@
      <row>
       <entry>5.1.0</entry>
       <entry>
-       Añadidos: Los métodos <link linkend="object.isset">__isset()</link> 
+       Añadido: Los métodos <link linkend="object.isset">__isset()</link> 
        y <link linkend="object.unset">__unset()</link>.
       </entry>
      </row>
