--- a/language/types/null.xml
+++ b/language/types/null.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 68c00dcb1a13208937382da1cd05239d1b73a922 Maintainer: jorgeolaya Status: ready --> 
+<!-- EN-Revision: a1daee7a1a17dab1a6ec6d987d998697bc57c18c Maintainer: jorgeolaya Status: ready --> 
 <!-- Reviewed: yes Maintainer: andresdzphp -->
 
 <sect1 xml:id="language.types.null">
@@ -8,7 +8,7 @@
  
  <para>
   El valor especial  &null;  representa una variable sin valor. &null; es el 
-  unico  posible valor de tipo <type>NULL</type>.
+  unico valor posible de tipo <type>NULL</type>.
  </para>  
  
  <para>
@@ -16,42 +16,42 @@
  </para>
  <itemizedlist>
   <listitem>
-  <para>
-  Se le ha asignado la constante &null;.
-  </para>
+   <para>
+    Se le ha asignado la constante &null;.
+   </para>
   </listitem>
   <listitem>
-  <para>
-  No se ha asignado en un valor todavía. 
-  </para>
+   <para>
+    No se ha asignado a un valor todavía. 
+   </para>
   </listitem>
   <listitem>
-  <para>
-  Se ha destruido con <function>unset</function>.
-  </para>
+   <para>
+    Se ha destruido con <function>unset</function>.
+   </para>
   </listitem>
  </itemizedlist>
  
-  <sect2 xml:id="language.types.null.syntax">
+ <sect2 xml:id="language.types.null.syntax">
   <title>Sintaxis</title>
    
-  <para>
-   No hay más que un valor de tipo <type>null</type>, y  es la 
-   constante  &null; entre mayúsculas y minúsculas.
-  </para>
- <informalexample>
- <programlisting role="php">
+   <para>
+    No hay más que un valor de tipo <type>null</type>, y  es la 
+    constante &null; insensible a mayúsculas/minúsculas.
+   </para>
+   <informalexample>
+    <programlisting role="php">
 <![CDATA[
 <?php
 $var = NULL;       
 ?>
 ]]>
-   </programlisting>
-  </informalexample>  
-  <para>
-   Véase también las funciones <function>is_null</function> y 
-   <function>unset</function>.
-  </para>
+  </programlisting>
+   </informalexample>  
+   <para>
+    Véase también las funciones <function>is_null</function> y 
+    <function>unset</function>.
+   </para>
  </sect2>
  <sect2 xml:id="language.types.null.casting">
   <title>El moldeado a <literal>NULL</literal></title>
