--- a/language/types/string.xml
+++ b/language/types/string.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: a9b26c34e481fa948bcc7d75b73b441605142dd7 Maintainer: andresdzphp Status: ready -->
+<!-- EN-Revision: 84b8fca68fc762fefe85acde180a38b2e77a28b9 Maintainer: andresdzphp Status: ready -->
 <!-- Reviewed: no Maintainer: andresdzphp -->
 
 <sect1 xml:id="language.types.string">
@@ -17,9 +17,7 @@
  
  <note>
   <simpara>
-   No existe problema alguno para que un <type>string</type> sea muy grande. PHP no impone
-   ningún límite para el tamaño de un <type>string</type>; el único límite es la memoria
-   disponible en el ordenador donde se está ejecutando PHP.
+      <type>string</type> puede llegar a alcanzar 2GB de tamaño.
   </simpara>
  </note>
  
@@ -877,7 +875,7 @@ $str[strlen($str)-1] = 'e';
   <para>
    Los <type>array</type>s siempre se convierten en un <type>string</type>
    <literal>"Array"</literal>. Debido a esto, tanto <function>echo</function> y
-   <function>print</function> no pueden pos si mismo mostrar el contenido de un
+   <function>print</function> no pueden pos sí mismos mostrar el contenido de un
    <type>array</type>. Para ver un elemento individualmente, utilice una
    construcción como <literal>echo $arr['foo']</literal>. Mire los trucos en la parte
    inferior para mostrar el contenido por completo.
