Updated to the most recent version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@325517 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/include.xml
+++ b/language/control-structures/include.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 547752940cda06624d44de01da7b89dc20237d5c Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 84b8fca68fc762fefe85acde180a38b2e77a28b9 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="function.include" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
- <title><function>include</function></title>
+ <title>include</title>
  <?phpdoc print-version-for="include"?>
  <simpara>
-  La sentencia <function>include</function> incluye y evalúa
+  La sentencia <literal>include</literal> incluye y evalúa
   el archivo especificado.
  </simpara>
  <simpara>
@@ -16,9 +16,9 @@
   Los archivos son incluidos con base en la ruta de acceso dada o, si ninguna es dada, el
   <link linkend="ini.include-path">include_path</link> especificado. Si el archivo
   no se encuentra en el <link linkend="ini.include-path">include_path</link>,
-  <function>include</function> finalmente verificará en el propio directorio del script
+  <literal>include</literal> finalmente verificará en el propio directorio del script
   que hace el llamado y en el directorio de trabajo actual, antes de fallar. El
-  constructor <function>include</function> emitirá una
+  constructor <literal>include</literal> emitirá una
   <link linkend="errorfunc.constants.errorlevels.e-warning">advertencia</link> si
   no puede encontrar un archivo, éste es un comportamiento diferente al de
   <function>require</function>, el cual emitirá un
@@ -48,7 +48,7 @@
  </simpara>
  <para>
   <example>
-   <title>Ejemplo básico de <function>include</function></title>
+   <title>Ejemplo básico de <literal>include</literal></title>
    <programlisting role="php">
 <![CDATA[
 vars.php
