--- a/language/control-structures/return.xml
+++ b/language/control-structures/return.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 1f426b8ca3bc4323173cb74c4f3c02a01963be9a Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 84b8fca68fc762fefe85acde180a38b2e77a28b9 Maintainer: jpberdejo Status: ready -->
 <!-- Reviewed: no Maintainer: andresdzphp -->
 
 <sect1 xml:id="function.return" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title>return</title>
  <?phpdoc print-version-for="return"?>
  <simpara>
-  Si se llama desde una función, la sentencia
-  <function>return</function> inmediatamente termina la ejecución de la función actual, y
+  Si se llama desde una función, la sentencia <literal>return</literal>
+  inmediatamente termina la ejecución de la función actual, y
   devuelve su argumento como el valor de la llamada a la
-  función. <function>return</function> también pondrá fin a la ejecución de
+  función. <literal>return</literal> también pondrá fin a la ejecución de
   una sentencia <function>eval</function> o a un archivo de script.
  </simpara>
  <simpara>
   Si se llama desde el ámbito global, entonces la ejecución del script
-  actual se termina. Si el archivo script actual fue incluido con
+  actual se termina. Si el archivo script actual fue incluido o requerido con
   <function>include</function> o <function>require</function>,
   entonces el control es pasado de regreso al archivo que hizo el llamado. Además, si
-  el archivo script actual fue incluido, entonces
-  el valor dado a <function>return</function> será retornado como
+  el archivo script actual fue incluido con <function>include</function>, entonces
+  el valor dado a <literal>return</literal> será retornado como
   el valor de la llamada <function>include</function>. Si
-  <function>return</function> es llamado desde dentro del archivo script
+  <literal>return</literal> es llamado desde dentro del fichero del script
   principal, entonces termina la ejecución del script. Si el archivo script actual fue
   nombrado por las opciones de configuración <link
   linkend="ini.auto-prepend-file">auto_prepend_file</link> o <link
@@ -35,7 +35,7 @@
  <para>
   <note>
    <simpara>
-    Cabe señalar que dado que <function>return</function> es un constructor
+    Cabe señalar que dado que <literal>return</literal> es un constructor
     del lenguaje y no una función, los paréntesis que rodean su
     argumentos no son necesarios. Es común no utilizarlos, y
     en realidad se debería hacer así a fin de que PHP tenga menos trabajo que hacer en este caso.
@@ -45,7 +45,7 @@
    <simpara>
     Si no se suministra un parámetro, entonces el paréntesis debe omitirse
     y &null; será
-    retornado. Llamadas a <function>return</function> con paréntesis pero
+    retornado. Llamadas a <literal>return</literal> con paréntesis pero
     sin argumentos resultarán en un error del intérprete.
    </simpara>
   </note>
